# api/swagger/swagger.yaml
@@ -105,7 +105,7 @@ paths:
     x-swagger-router-controller: EventController
     post:
       description: Create event with authorized user
-      operationId: create
+      operationId: createEvent
       parameters:
         - name: Authorization
           in: header
@@ -188,6 +188,27 @@ paths:
           schema:
             $ref: "#/definitions/Event"
         # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /restaurant:
+    x-swagger-router-controller: RestaurantController
+    post:
+      description: Uploads csv file of restaurant/promotion info, admin required.
+      operationId: createRestaurant
+      consumes:
+        - multipart/form-data
+      parameters:
+        - name: Authorization
+          in: header
+          type: string
+          required: true
+        - name: uploadFile
+          in: formData
+          type: file
+          required: true
+      responses:
         default:
           description: Error
           schema:
